Fix y position of edit controls for small screens #160
**Why?** On small screens - and the default farmOS layout - the
  controls often overlap or even go off the bottom of the map
  making them hard to use or completely inaccessible.

--- a/src/control/Edit/Edit.css
+++ b/src/control/Edit/Edit.css
@@ -1,5 +1,4 @@
 .ol-edit.ol-control {
-  top: 8em;
   left: 0.5em;
 }
 
